--- a/src/assets/css/file_icon.css
+++ b/src/assets/css/file_icon.css
@@ -31,6 +31,8 @@
 }
 
 .folderWrapper {
+    width: 150px;
+    height: 130px;
     padding: 20px 20px 10px 20px;
     position: relative;
     transition: all .2s ease;
@@ -39,6 +41,7 @@
 }
 
 .folderWrapper:hover {
+
     background-color: #ffffff;
 }
 
@@ -117,9 +120,9 @@
     position: absolute;
     display: flex;
     justify-content: center;
+    padding: 2px;
     align-items: center;
     width: 130px;
-    height: 205px;
     background-color: rgba(6, 13, 20, .18);
     border-radius: 12px;
     box-shadow: 0px 8px 24px rgba(25, 25, 26, .06), 0px 4px 16px rgba(25, 25, 26, .04), 0px 0px 4px rgba(25, 25, 26, .04);
@@ -140,6 +143,7 @@
     width: 100%;
     height: 36px;
     margin-top: 5px;
+    margin-bottom: 5px
 }
 
 .add-folder-2:hover {
